# spark_sidecar

./: .dockerignore  .gitignore  .prettierignore  Dockerfile  Makefile  README.md  flake.nix  package-lock.json  package.json  pyproject.toml  server.mjs
.github/workflows/: ci.yml  docker.yml  release.yml
