[project]
name = "lnbits-spark-sidecar"
version = "0.1.0"
requires-python = ">=3.10,<3.13"
description = "Sidecar for Spark Wallet to integrate with LNbits"
authors = [{ name = "Alan Bits", email = "alan@lnbits.com" }]
urls = { Homepage = "https://lnbits.com", Repository = "https://github.com/lnbits/spark_sidecar" }
dependencies = [ "lnbits>1" ]

[tool.poetry]
package-mode = false